test/deprecated-keyword/deprecateForwarding.good
deprecateForwarding.chpl:5: error: can't deprecate a forwarding statement
